Adicionando detalhes para o produtos

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <p>Camiseta feita com algodão 100% orgânico</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 79,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/camiseta.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         <p>Bolsa feita com material reciclado de garrafas PET</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 89,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/bolsa.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                         <p>Tênis feito com materiais veganos e sustentáveis</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 199,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/tenis.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                         <p>Moletom feito com algodão orgânico e corantes naturais</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 329,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/moletom.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                         <p>Produtos de beleza com ingredientes naturais</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 129,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/kit-beleza.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                         <p>Shampoo em barra natural, sem embalagem plástica</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 32,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/shampoo.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                         <p>Escova de dentes com cabo de bambu e cerdas naturais</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 24,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/escova.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                         <p>Hidratante facial com ingredientes 100% naturais</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 59,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/creme.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                         <p>Copo de bambu com tampa, perfeito para o dia a dia</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 39,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/copo.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
                         <p>Conjunto com 4 canudos de inox e limpador</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 49,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/canudos.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                         <p>Utensílios de cozinha feitos com materiais sustentáveis</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 89,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/cozinha.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
                         <p>Tapete feito de materiais biodegradáveis</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 199,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/tapete.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -333,7 +333,7 @@
                         <p>Carregador portátil com energia solar para dispositivos móveis</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 199,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/carregador.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -346,7 +346,7 @@
                         <p>Lâmpada LED de baixo consumo energético</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 29,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/lampada.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -359,7 +359,7 @@
                         <p>Termostato que economiza energia e reduz emissões</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 599,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/termostato.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
                         <p>Feita de materiais que não ferem o meio ambiente</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <span class="product-price">R$ 39,90</span>
-                            <a href="#" class="btn btn-primary btn-sm">Comprar</a>
+                            <a href="src/pages/capa.html" class="btn btn-primary btn-sm">Comprar</a>
                         </div>
                     </div>
                 </div>
