--- a/src/pages/detalhes/bolsa.html
+++ b/src/pages/detalhes/bolsa.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Escova de Bambu</title>
+  <title>Bolsa de Garrafa PET</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -54,20 +54,20 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/escova.jpg" class="img-fluid rounded shadow" alt="Escova de Bambu">
+        <img src="img/bolsa.jpg" class="img-fluid rounded shadow" alt="Bolsa de Garrafa PET">
       </div>
       <div class="col-md-6">
-        <h2>Escova de Bambu</h2>
-        <span class="badge bg-success mb-2">Biodegradável</span>
-        <p class="text-muted">Descrição completa do produto escova de bambu.</p>
-        <h3 class="text-success fw-bold">R$ 24,90</h3>
+        <h2>Bolsa de Garrafa PET</h2>
+        <span class="badge bg-success mb-2">Reciclado</span>
+        <p class="text-muted">Descrição completa do produto bolsa de garrafa pet.</p>
+        <h3 class="text-success fw-bold">R$ 89,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Eco-friendly e biodegradável, perfeita para cuidar dos cabelos sem prejudicar o planeta.</li>
-      
+          <li>Transforme plástico reciclado em moda! Bolsa resistente, prática e sustentável.</li>
+    
         </ul>
       </div>
     </div>
