--- a/src/pages/detalhes/camiseta.html
+++ b/src/pages/detalhes/camiseta.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tênis Ecológico</title>
+  <title>Camiseta Orgânica</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 <!-- Navbar -->
@@ -54,20 +54,20 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/tenis.jpg" class="img-fluid rounded shadow" alt="Tênis Ecológico">
+        <img src="img/camiseta.jpg" class="img-fluid rounded shadow" alt="Camiseta Orgânica">
       </div>
       <div class="col-md-6">
-        <h2>Tênis Ecológico</h2>
-        <span class="badge bg-success mb-2">Orgânico</span>
-        <p class="text-muted">Descrição completa do produto tênis ecológico.</p>
-        <h3 class="text-success fw-bold">R$ 199,90</h3>
+        <h2>Camiseta Orgânica</h2>
+        <span class="badge bg-success mb-2">Eco-friendly</span>
+        <p class="text-muted">Descrição completa do produto camiseta orgânica.</p>
+        <h3 class="text-success fw-bold">R$ 79,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Conforto e estilo com materiais reciclados e processos de produção conscientes.</li>
-         
+          <li>Feita 100% de algodão orgânico, leve e confortável, ideal para quem busca estilo sem agredir o meio ambiente.</li>
+     
         </ul>
       </div>
     </div>
