--- a/src/pages/detalhes/copo.html
+++ b/src/pages/detalhes/copo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carregador Solar</title>
+  <title>Copo Reutilizável</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -54,19 +54,19 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/carregador.jpg" class="img-fluid rounded shadow" alt="Carregador Solar">
+        <img src="img/copo.jpg" class="img-fluid rounded shadow" alt="Copo Reutilizável">
       </div>
       <div class="col-md-6">
-        <h2>Carregador Solar</h2>
-        <span class="badge bg-success mb-2">Energia Solar</span>
-        <p class="text-muted">Descrição completa do produto carregador solar.</p>
-        <h3 class="text-success fw-bold">R$ 199,90</h3>
+        <h2>Copo Reutilizável</h2>
+        <span class="badge bg-success mb-2">Reutilizável</span>
+        <p class="text-muted">Descrição completa do produto copo reutilizável.</p>
+        <h3 class="text-success fw-bold">R$ 39,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Energia limpa e portátil, ideal para carregar seus dispositivos de forma sustentável.</li>
+          <li>Leve, durável e ecológico. Ideal para substituir descartáveis no dia a dia.</li>
         
         </ul>
       </div>
