--- a/src/pages/detalhes/escova.html
+++ b/src/pages/detalhes/escova.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoTrend - Produtos Sustentáveis</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome para ícones -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Escova de Bambu</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/header_footer.css">
 </head>
 <body>
 <!-- Navbar -->
@@ -24,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Início</a>
+                    <a class="nav-link active" href="../../index.html">Início</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
@@ -54,7 +51,27 @@
         </div>
     </div>
 </nav>
-<div class="a">a</div>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="img/escova.jpg" class="img-fluid rounded shadow" alt="Escova de Bambu">
+      </div>
+      <div class="col-md-6">
+        <h2>Escova de Bambu</h2>
+        <span class="badge bg-success mb-2">Biodegradável</span>
+        <p class="text-muted">Descrição completa do produto escova de bambu.</p>
+        <h3 class="text-success fw-bold">R$ 24,90</h3>
+        <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
+        <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
+        <hr class="my-4">
+        <h5>Mais Detalhes:</h5>
+        <ul>
+          <li>Eco-friendly e biodegradável, perfeita para cuidar dos cabelos sem prejudicar o planeta.</li>
+      
+        </ul>
+      </div>
+    </div>
+  </div>
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
@@ -104,8 +121,5 @@
         </div>
     </div>
 </footer>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
+</body>
+</html>
