--- a/src/pages/detalhes/kit-beleza.html
+++ b/src/pages/detalhes/kit-beleza.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conjunto de Cozinha</title>
+  <title>Kit Beleza Natural</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -54,20 +54,20 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/cozinha.jpg" class="img-fluid rounded shadow" alt="Conjunto de Cozinha">
+        <img src="img/kit-beleza.jpg" class="img-fluid rounded shadow" alt="Kit Beleza Natural">
       </div>
       <div class="col-md-6">
-        <h2>Conjunto de Cozinha</h2>
-        <span class="badge bg-success mb-2">Eco-friendly</span>
-        <p class="text-muted">Descrição completa do produto conjunto de cozinha.</p>
-        <h3 class="text-success fw-bold">R$ 89,90</h3>
+        <h2>Kit Beleza Natural</h2>
+        <span class="badge bg-success mb-2">Natural</span>
+        <p class="text-muted">Descrição completa do produto kit beleza natural.</p>
+        <h3 class="text-success fw-bold">R$ 129,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Utensílios feitos com materiais sustentáveis, resistentes e livres de químicos nocivos.</li>
-        
+          <li>Um conjunto completo de produtos naturais, livres de químicos agressivos, para cuidar da sua pele com consciência ambiental.</li>
+    
         </ul>
       </div>
     </div>
