--- a/src/pages/detalhes/lampada.html
+++ b/src/pages/detalhes/lampada.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Creme Facial Natural</title>
+  <title>Lâmpada LED Ecológica</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -54,20 +54,20 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/creme.jpg" class="img-fluid rounded shadow" alt="Creme Facial Natural">
+        <img src="img/lampada.jpg" class="img-fluid rounded shadow" alt="Lâmpada LED Ecológica">
       </div>
       <div class="col-md-6">
-        <h2>Creme Facial Natural</h2>
-        <span class="badge bg-success mb-2">Orgânico</span>
-        <p class="text-muted">Descrição completa do produto creme facial natural.</p>
-        <h3 class="text-success fw-bold">R$ 59,90</h3>
+        <h2>Lâmpada LED Ecológica</h2>
+        <span class="badge bg-success mb-2">Eficiência Energética</span>
+        <p class="text-muted">Descrição completa do produto lâmpada led ecológica.</p>
+        <h3 class="text-success fw-bold">R$ 29,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Hidratação suave com ingredientes 100% naturais, ideal para todos os tipos de pele.</li>
-          
+          <li>Economia de energia e longa durabilidade sem abrir mão da luminosidade.</li>
+       
         </ul>
       </div>
     </div>
