--- a/src/pages/detalhes/shampoo.html
+++ b/src/pages/detalhes/shampoo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Termostato Inteligente</title>
+  <title>Shampoo Sólido</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -54,20 +54,20 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/termostato.jpg" class="img-fluid rounded shadow" alt="Termostato Inteligente">
+        <img src="img/shampoo.jpg" class="img-fluid rounded shadow" alt="Shampoo Sólido">
       </div>
       <div class="col-md-6">
-        <h2>Termostato Inteligente</h2>
-        <span class="badge bg-success mb-2">Smart Home</span>
-        <p class="text-muted">Descrição completa do produto termostato inteligente.</p>
-        <h3 class="text-success fw-bold">R$ 599,90</h3>
+        <h2>Shampoo Sólido</h2>
+        <span class="badge bg-success mb-2">Zero Waste</span>
+        <p class="text-muted">Descrição completa do produto shampoo sólido.</p>
+        <h3 class="text-success fw-bold">R$ 32,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Controle eficiente do clima da sua casa, reduzindo consumo de energia.</li>
-      
+          <li>Sem plástico, concentrado e duradouro. Limpa seus cabelos com fórmulas naturais.</li>
+       
         </ul>
       </div>
     </div>
