--- a/src/pages/detalhes/tenis.html
+++ b/src/pages/detalhes/tenis.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Capa de celular ecológica</title>
+  <title>Tênis Ecológico</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -54,20 +54,20 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/capa.jpg" class="img-fluid rounded shadow" alt="Capa de celular ecológica">
+        <img src="img/tenis.jpg" class="img-fluid rounded shadow" alt="Tênis Ecológico">
       </div>
       <div class="col-md-6">
-        <h2>Capa de celular ecológica</h2>
-        <span class="badge bg-success mb-2">Inovação</span>
-        <p class="text-muted">Descrição completa do produto capa de celular ecológica.</p>
-        <h3 class="text-success fw-bold">R$ 39,90</h3>
+        <h2>Tênis Ecológico</h2>
+        <span class="badge bg-success mb-2">Orgânico</span>
+        <p class="text-muted">Descrição completa do produto tênis ecológico.</p>
+        <h3 class="text-success fw-bold">R$ 199,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
         <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
-          <li>Proteção para seu aparelho com materiais reciclados e design moderno.</li>
-       
+          <li>Conforto e estilo com materiais reciclados e processos de produção conscientes.</li>
+         
         </ul>
       </div>
     </div>
