Full changes to almost every page, also made the products pictures in detalhes show up, and also done the correct a href for the html pages

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
                     <a class="nav-link active" href="#">Início</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle" href="src/pages/Categorias.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                         Categorias
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#roupas">Roupas e Acessórios</a></li>
-                        <li><a class="dropdown-item" href="#beleza">Beleza Natural</a></li>
-                        <li><a class="dropdown-item" href="#casa">Casa Sustentável</a></li>
-                        <li><a class="dropdown-item" href="#tecnologia">Tecnologia Verde</a></li>
+                        <li><a class="dropdown-item" href="src/pages/Categorias.html#roupas">Roupas e Acessórios</a></li>
+                        <li><a class="dropdown-item" href="src/pages/Categorias.html#beleza">Beleza Natural</a></li>
+                        <li><a class="dropdown-item" href="src/pages/Categorias.html#casa">Casa Sustentável</a></li>
+                        <li><a class="dropdown-item" href="src/pages/Categorias.html#tecnologia">Tecnologia Verde</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
+                    <a class="nav-link" href="src/pages/Sobre.html">Sobre</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -68,7 +68,7 @@
             <div class="carousel-caption">
                 <h2>Estilo de Vida Consciente</h2>
                 <p class="carousel-text">Descubra produtos sustentáveis que fazem a diferença para o planeta</p>
-                <a href="#" class="btn btn-primary btn-lg mt-3">Explorar Produtos</a>
+                <a href="src/pages/Sobre.html" class="btn btn-primary btn-lg mt-3">Descubra mais</a>
             </div>
         </div>
         <div class="carousel-item">
@@ -76,7 +76,7 @@
             <div class="carousel-caption">
                 <h2>Moda Sustentável</h2>
                 <p class="carousel-text">Roupas e acessórios feitos com materiais ecológicos</p>
-                <a href="#" class="btn btn-primary btn-lg mt-3">Ver Coleção</a>
+                <a href="src/pages/Sobre.html" class="btn btn-primary btn-lg mt-3">Descubra mais</a>
             </div>
         </div>
         <div class="carousel-item">
@@ -84,7 +84,7 @@
             <div class="carousel-caption">
                 <h2>Tecnologia Verde</h2>
                 <p class="carousel-text">Inovação tecnológica que respeita o meio ambiente</p>
-                <a href="#" class="btn btn-primary btn-lg mt-3">Conhecer Tecnologias</a>
+                <a href="src/pages/Sobre.html" class="btn btn-primary btn-lg mt-3">Descubra mais</a>
             </div>
         </div>
     </div>
@@ -109,7 +109,7 @@
                     <img src="src/assets/images/roupas.webp" class="card-img-top" alt="Roupas sustentáveis">
                     <div class="card-body text-center">
                         <h5 class="card-title">Roupas e Acessórios</h5>
-                        <a href="#roupas" class="btn btn-outline-primary">Explorar</a>
+                        <a href="src/pages/Categorias.html#roupas" class="btn btn-outline-primary">Explorar</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     <img src="src/assets/images/beleza.webp" class="card-img-top" alt="Produtos de beleza">
                     <div class="card-body text-center">
                         <h5 class="card-title">Beleza Natural</h5>
-                        <a href="#beleza" class="btn btn-outline-primary">Explorar</a>
+                        <a href="src/pages/Categorias.html#beleza" class="btn btn-outline-primary">Explorar</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <img src="src/assets/images/casa.jpg" class="card-img-top" alt="Itens para casa">
                     <div class="card-body text-center">
                         <h5 class="card-title">Casa Sustentável</h5>
-                        <a href="#casa" class="btn btn-outline-primary">Explorar</a>
+                        <a href="src/pages/Categorias.html#casa" class="btn btn-outline-primary">Explorar</a>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     <img src="src/assets/images/tecnologiaverde.jpg" class="card-img-top" alt="Tecnologia verde">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tecnologia Verde</h5>
-                        <a href="#tecnologia" class="btn btn-outline-primary">Explorar</a>
+                        <a href="src/pages/Categorias.html#tecnologia" class="btn btn-outline-primary">Explorar</a>
                     </div>
                 </div>
             </div>
@@ -203,30 +203,30 @@
                     <a href="#"><i class="fab fa-pinterest"></i></a>
                 </div>
             </div>
-            <div class="col-md-2 mb-4">
-                <h5>Loja</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#roupas" class="text-white">Roupas</a></li>
-                    <li><a href="#beleza" class="text-white">Beleza</a></li>
-                    <li><a href="#casa" class="text-white">Casa</a></li>
-                    <li><a href="#tecnologia" class="text-white">Tecnologia</a></li>
-                </ul>
-            </div>
-            <div class="col-md-2 mb-4">
-                <h5>Informações</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-white">Sobre Nós</a></li>
-                    <li><a href="#" class="text-white">Perguntas Frequentes</a></li>
-                    <li><a href="#" class="text-white">Entregas</a></li>
-                    <li><a href="#" class="text-white">Trocas e Devoluções</a></li>
-                </ul>
-            </div>
+<div class="col-md-2 mb-4">
+    <h5>Loja</h5>
+    <ul class="list-unstyled">
+        <li><a href="src/pages/Categorias.html#roupas" class="text-white">Roupas</a></li>
+        <li><a href="src/pages/Categorias.html#beleza" class="text-white">Beleza</a></li>
+        <li><a href="src/pages/Categorias.html#casa" class="text-white">Casa</a></li>
+        <li><a href="src/pages/Categorias.html#tecnologia" class="text-white">Tecnologia</a></li>
+    </ul>
+</div>
+<div class="col-md-2 mb-4">
+    <h5>Informações</h5>
+    <ul class="list-unstyled">
+        <li><a href="#" class="text-white">Sobre Nós</a></li>
+        <li><a href="#" class="text-white">Perguntas Frequentes</a></li>
+        <li><a href="#" class="text-white">Entregas</a></li>
+        <li><a href="#" class="text-white">Trocas e Devoluções</a></li>
+    </ul>
+</div>
             <div class="col-md-4 mb-4">
-                <h5>Contato</h5>
+                <h5>Sobre</h5>
                 <ul class="list-unstyled">
                     <li><i class="fas fa-map-marker-alt me-2"></i> Av. Sustentabilidade, 123 - EcoVille</li>
                     <li><i class="fas fa-phone me-2"></i> (11) 99999-9999</li>
-                    <li><i class="fas fa-envelope me-2"></i> contato@ecotrend.com</li>
+                    <li><i class="fas fa-envelope me-2"></i> Sobre@ecotrend.com</li>
                 </ul>
             </div>
         </div>
@@ -241,6 +241,5 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
+</body>
+</html>
