--- a/src/pages/Sobre.html
+++ b/src/pages/Sobre.html
@@ -24,21 +24,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Início</a>
+                    <a class="nav-link" href="../../index.html">Início</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                         Categorias
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#roupas">Roupas e Acessórios</a></li>
-                        <li><a class="dropdown-item" href="#beleza">Beleza Natural</a></li>
-                        <li><a class="dropdown-item" href="#casa">Casa Sustentável</a></li>
-                        <li><a class="dropdown-item" href="#tecnologia">Tecnologia Verde</a></li>
+                        <li><a class="dropdown-item" href="Categorias.html#roupas">Roupas e Acessórios</a></li>
+                        <li><a class="dropdown-item" href="Categorias.html#beleza">Beleza Natural</a></li>
+                        <li><a class="dropdown-item" href="Categorias.html#casa">Casa Sustentável</a></li>
+                        <li><a class="dropdown-item" href="Categorias.html#tecnologia">Tecnologia Verde</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
+                    <a class="nav-link active" href="#">Sobre</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -69,30 +69,30 @@
                     <a href="#"><i class="fab fa-pinterest"></i></a>
                 </div>
             </div>
-            <div class="col-md-2 mb-4">
-                <h5>Loja</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#roupas" class="text-white">Roupas</a></li>
-                    <li><a href="#beleza" class="text-white">Beleza</a></li>
-                    <li><a href="#casa" class="text-white">Casa</a></li>
-                    <li><a href="#tecnologia" class="text-white">Tecnologia</a></li>
-                </ul>
-            </div>
-            <div class="col-md-2 mb-4">
-                <h5>Informações</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-white">Sobre Nós</a></li>
-                    <li><a href="#" class="text-white">Perguntas Frequentes</a></li>
-                    <li><a href="#" class="text-white">Entregas</a></li>
-                    <li><a href="#" class="text-white">Trocas e Devoluções</a></li>
-                </ul>
-            </div>
+<div class="col-md-2 mb-4">
+    <h5>Loja</h5>
+    <ul class="list-unstyled">
+        <li><a href="categorias.html#roupas" class="text-white">Roupas</a></li>
+        <li><a href="Categorias.html#beleza" class="text-white">Beleza</a></li>
+        <li><a href="Categorias.html#casa" class="text-white">Casa</a></li>
+        <li><a href="Categorias.html#tecnologia" class="text-white">Tecnologia</a></li>
+    </ul>
+</div>
+<div class="col-md-2 mb-4">
+    <h5>Informações</h5>
+    <ul class="list-unstyled">
+        <li><a href="#" class="text-white">Sobre Nós</a></li>
+        <li><a href="#" class="text-white">Perguntas Frequentes</a></li>
+        <li><a href="#" class="text-white">Entregas</a></li>
+        <li><a href="#" class="text-white">Trocas e Devoluções</a></li>
+    </ul>
+</div>
             <div class="col-md-4 mb-4">
-                <h5>Contato</h5>
+                <h5>Sobre</h5>
                 <ul class="list-unstyled">
                     <li><i class="fas fa-map-marker-alt me-2"></i> Av. Sustentabilidade, 123 - EcoVille</li>
                     <li><i class="fas fa-phone me-2"></i> (11) 99999-9999</li>
-                    <li><i class="fas fa-envelope me-2"></i> contato@ecotrend.com</li>
+                    <li><i class="fas fa-envelope me-2"></i> Sobre@ecotrend.com</li>
                 </ul>
             </div>
         </div>
@@ -107,5 +107,7 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
 
