--- a/src/pages/detalhes/moletom.html
+++ b/src/pages/detalhes/moletom.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moletom Sustentável</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../css/header_footer.css">
+    <link rel="stylesheet" href="../../css/detalhes.css">
+    <link rel="stylesheet" href="../../css/header_footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -21,21 +22,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="../../index.html">Início</a>
+                    <a class="nav-link" href="../../../index.html">Início</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                         Categorias
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#roupas">Roupas e Acessórios</a></li>
-                        <li><a class="dropdown-item" href="#beleza">Beleza Natural</a></li>
-                        <li><a class="dropdown-item" href="#casa">Casa Sustentável</a></li>
-                        <li><a class="dropdown-item" href="#tecnologia">Tecnologia Verde</a></li>
+                        <li><a class="dropdown-item" href="../Categorias.html#roupas">Roupas e Acessórios</a></li>
+                        <li><a class="dropdown-item" href="../Categorias.html#beleza">Beleza Natural</a></li>
+                        <li><a class="dropdown-item" href="../Categorias.html#casa">Casa Sustentável</a></li>
+                        <li><a class="dropdown-item" href="../Categorias.html#tecnologia">Tecnologia Verde</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
+                    <a class="nav-link" href="../Sobre.html">Sobre</a>
                 </li>
             </ul>
             <div class="d-flex">
@@ -54,15 +55,17 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="img/moletom.jpg" class="img-fluid rounded shadow" alt="Moletom Sustentável">
-      </div>
+         <div class="product-image-container">
+        <img src="../../assets/images/moletom.webp" class="img-fluid rounded shadow" alt="Bolsa de Garrafa PET">
+         </div>      
+    </div>
       <div class="col-md-6">
         <h2>Moletom Sustentável</h2>
         <span class="badge bg-success mb-2">Ecológico</span>
         <p class="text-muted">Descrição completa do produto moletom sustentável.</p>
         <h3 class="text-success fw-bold">R$ 329,90</h3>
         <button class="btn btn-primary btn-lg mt-3">Adicionar ao Carrinho</button>
-        <a href="index.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
+        <a href="../../pages/Categorias.html" class="btn btn-outline-secondary btn-lg mt-3">Voltar</a>
         <hr class="my-4">
         <h5>Mais Detalhes:</h5>
         <ul>
@@ -89,10 +92,10 @@
             <div class="col-md-2 mb-4">
                 <h5>Loja</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#roupas" class="text-white">Roupas</a></li>
-                    <li><a href="#beleza" class="text-white">Beleza</a></li>
-                    <li><a href="#casa" class="text-white">Casa</a></li>
-                    <li><a href="#tecnologia" class="text-white">Tecnologia</a></li>
+                    <li><a href="../Categorias.html#roupas" class="text-white">Roupas</a></li>
+                    <li><a href="../Categorias.html#beleza" class="text-white">Beleza</a></li>
+                    <li><a href="../Categorias.html#casa" class="text-white">Casa</a></li>
+                    <li><a href="../Categorias.html#tecnologia" class="text-white">Tecnologia</a></li>
                 </ul>
             </div>
             <div class="col-md-2 mb-4">
@@ -105,11 +108,11 @@
                 </ul>
             </div>
             <div class="col-md-4 mb-4">
-                <h5>Contato</h5>
+                <h5>Sobre</h5>
                 <ul class="list-unstyled">
                     <li><i class="fas fa-map-marker-alt me-2"></i> Av. Sustentabilidade, 123 - EcoVille</li>
                     <li><i class="fas fa-phone me-2"></i> (11) 99999-9999</li>
-                    <li><i class="fas fa-envelope me-2"></i> contato@ecotrend.com</li>
+                    <li><i class="fas fa-envelope me-2"></i> Sobre@ecotrend.com</li>
                 </ul>
             </div>
         </div>
@@ -121,5 +124,7 @@
         </div>
     </div>
 </footer>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
