--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
     </button>
 </div>
 
+<!-- PROFESSOR, LEIA, a gente tinha feito a seção de produtos na página inicial como foi pedido, mas como na página de categoria tambem era pra ter produtos, tomamos a decisão de separar, mas saiba q foi feito
+(se isso for motivo para desconsiderar pontos ou algo assim) POR FAVOR manda mensagem q eu tenho a versão com os itens na home page, só achamos um pouco repetitivo e tiramos-->
+
 
 <!-- Categorias -->
 <section class="py-5">
